Vertical sidebar spacing. Fix bug with fit to window. Remove .css files from repo so they don't cause sadness.

--- a/web-client/public/stylesheets/grnsight.styl
+++ b/web-client/public/stylesheets/grnsight.styl
@@ -49,19 +49,23 @@ body
   width: 1920px
   height: 1080px
 
-.sliders
+.sidebar
 	width: 225px
 	margin-left: 10px
 
-form
-  margin-bottom: 1ex
+#lockSlidersButton
+  margin-bottom: 15px
 
+// form
+//   margin-bottom: 1ex
+//
 form label, form span
-  margin: 1ex
+  margin: 5px
 
 .navbar
   top: 1px
   margin-right: auto
+  margin-bottom: 10px
 
 .glyphicon
   min-width: 22px
@@ -206,16 +210,16 @@ text.weight.visible
   font-size: 14.5px;
   margin-left: 17px;
   margin-bottom: 10px;
-  margin-top: 25px;
+  margin-top: 10px;
 
-#weightsMouseOverSide
-  margin-left: 7px;
-
-#weightsAlwaysSide
-  margin-left: 7px;
-
-#weightsNeverSide
-  margin-left: 7px;
+// #weightsMouseOverSide
+//   margin-left: 7px;
+//
+// #weightsAlwaysSide
+//   margin-left: 7px;
+//
+// #weightsNeverSide
+//   margin-left: 7px;
 
 path.mousezone
     opacity: 0.0
